--- a/packages/powersync_attachments_helper/pubspec.yaml
+++ b/packages/powersync_attachments_helper/pubspec.yaml
@@ -2,7 +2,7 @@ name: powersync_attachments_helper
 description: A helper library for handling attachments when using PowerSync.
 version: 0.1.1
 homepage: https://www.powersync.com/
-repository: https://github.com/journeyapps/powersync.dart
+repository: https://github.com/rkistner/powersync.dart
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
